--- a/src/index.css
+++ b/src/index.css
@@ -74,3 +74,23 @@ button:hover {
         background-color: #f9f9f9;
     }
 }
+
+.fade{
+    animation: fadeIn ease 1.5s;
+}
+@keyframes fadeIn {
+    0% {
+        opacity:0;
+    }
+    100% {
+        opacity:1;
+    }
+}
+@-moz-keyframes fadeIn {
+    0% {
+        opacity:0;
+    }
+    100% {
+        opacity:1;
+    }
+}
